--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">Leeds Trinity University, Horsforth, Leeds, West Yorkshire, LS18 5HD
             <a href="mailto:name@email.com">j.simmons@leedstrinity.ac.uk</a>
           </div>
-          <p class="lead mb-5">I am a Placement Advisor who works to support both Students and Clients.</p>
+          <p class="lead mb-5">I am a Placement Advisor who works to support both students and clients. I work in a 360 degree environment to engage and enhance career possibilities.</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
