--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Joe
-            <span class="text-primary">Simmons</span>
+          <h1 class="mb-0">Joe1
+            <span class="text-primary">Simmons1</span>
           </h1>
-          <div class="subheading mb-5">Leeds Trinity University, Horsforth, Leeds, West Yorkshire, LS18 5HD
+          <div class="subheading mb-5">Leeds Trinity University, Horsforth, Leeds, West Yorkshire1, LS18 5HD
             <a href="mailto:name@email.com">j.simmons@leedstrinity.ac.uk</a>
           </div>
           <p class="lead mb-5">I am a Placement Advisor who works to support both students and clients. I work in a 360 degree environment to engage and enhance career possibilities.</p>
