--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Joe1
-            <span class="text-primary">Simmons1</span>
+          <h1 class="mb-0">Joe
+            <span class="text-primary">Simmons</span>
           </h1>
           <div class="subheading mb-5">Leeds Trinity University, Horsforth, Leeds, West Yorkshire1, LS18 5HD
             <a href="mailto:name@email.com">j.simmons@leedstrinity.ac.uk</a>
@@ -95,9 +95,9 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Placement Advisor</h3>
+              <div class="subheading mb-3">Leeds Trinity University</div>
+              <p>To support students and placement providers with the process of offering a placement.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2013 - Present</span>
